[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hastat"
version = "1.0.0"
authors = [{ name = "Xiaodong Li", email = "lxd1997xy@163.com" }]
description = "A library for gene haplotypes analysis and statistics."
readme = "README.md"
keywords = ["gene", "genotype", "haplotypes", "statistics", "analysis"]
requires-python = ">=3.9"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    'numpy>=1.21.2',
    'pandas>=1.3.3',
    'matplotlib>=3.9.0',
    'scipy>=1.7.1',
    'statsmodels>=0.13.0',
    'scikit-allel>=1.3.6',
    'gffutils>=0.10.1',
    'pysam>=0.17.0',
    'prettytable>=3.16.0',
    'tomli>=2.2.1',
    'networkx>=3.0'
]
dynamic = ['entry-points']

[project.urls]
Homepage = "https://github.com/swu1019lab/hastat"
issues = "https://github.com/swu1019lab/hastat/issues"

[project.scripts]
hastat = "hastat.hastat:main"
